--- a/root/init.rc
+++ b/root/init.rc
@@ -180,7 +180,7 @@ on property:sys.boot_from_charger_mode=1
     trigger late-init
 
 on load_all_props_action
-    load_all_props
+    load_system_props # gabry3795
     start logd
     start logd-reinit
 on cust_parse_action
@@ -572,7 +572,7 @@ service filebackup /system/bin/filebackup
 service media /system/bin/mediaserver
     class main
     user media
-    group audio camera inet net_bt net_bt_admin net_bw_acct drmrpc mediadrm system dsm
+    group audio camera inet net_bt net_bt_admin net_bw_acct drmrpc mediadrm
     ioprio rt 4
 
 service defaultcrypto /system/bin/vdc --wait cryptfs mountdefaultencrypted
